# B25-tourism

./: amadeus_flights.csv  app.py  main.py  numbeo_category_data.csv  numbeo_category_data_jpy.csv  pyproject.toml  requirements.txt
app/: amadeus_flights.csv  amadeus_search.py  app.py  app1.py  flight.py  fly.py  graphapp.py  numbeo.py  numbeo2.py  numbeo_JPY.py  numbeo_category_data.csv  numbeo_category_data_jpy.csv  numbeo_data.csv  numbeodata.py  scrape_flights.py  tesnum.py  test_fi.py  tryairapp.py  tryfinanceapp.py
basic-sidebar/: shared.py
