[project]
name = "b25-tourism"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "certifi>=2025.10.5",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "ridgeplot>=0.5.0",
    "seaborn>=0.13.2",
    "selenium>=4.38.0",
    "shiny>=1.5.0",
    "shinywidgets>=0.7.0",
    "yfinance>=0.2.66",
]
